# BamEngine

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Cube.fbx  README.en.md  README.md  ReflectionGenerator.py  convert_encoding.py  imgui.ini  move_files.py  vcpkg-configuration.json  vcpkg.json
Client/: CMakeLists.txt
Editor/: CMakeLists.txt
Editor/Source/: Editor_Includes.h  Editor_Macros.h
Editor/Source/Application/: Application.cpp  Application.h
Editor/Source/Application/Camera/Private/: EditorCamera.cpp
Editor/Source/Application/Camera/Public/: EditorCamera.h
Editor/Source/Application/Private/: Application.cpp  Main.cpp
Editor/Source/Application/Private/Camera/: EditorCamera.cpp
Editor/Source/Application/Public/: Application.h
Editor/Source/Application/Public/Camera/: EditorCamera.h
Editor/Source/AssetManager/AssetCache/Private/: AssetCache.cpp
Editor/Source/AssetManager/AssetCache/Public/: AssetCache.h
Editor/Source/AssetManager/Exporter/Public/: ExporterInterface.h
Editor/Source/AssetManager/Importer/Private/: AnimationImporter.cpp  ModelImporter.cpp  ShaderImporter.cpp  SpriteImporter.cpp  TextureImporter.cpp
Editor/Source/AssetManager/Importer/Public/: AnimationImporter.h  AudioImporter.h  ImporterInterface.h  MaterialImporter.h  ModelImporter.h  ShaderImporter.h  SpriteImporter.h  TextureImporter.h
Editor/Source/AssetManager/Private/: AssetManager.cpp
Editor/Source/AssetManager/Public/: AssetManager.h
Editor/Source/FileDialog/Private/: FileDialogs.cpp
Editor/Source/FileDialog/Public/: FileDialogs.h
Editor/Source/ImGui/ContentBrowserPanel/Private/: ContentBrowserGridItem.cpp  ContentBrowserPanel.cpp  ContentBrowserTreeItem.cpp
Editor/Source/ImGui/ContentBrowserPanel/Public/: ContentBrowserGridItem.h  ContentBrowserPanel.h  ContentBrowserTreeItem.h
Editor/Source/ImGui/HierarchyPanel/Private/: HierachyPanel.cpp  HierarchyPanel.cpp
Editor/Source/ImGui/HierarchyPanel/Public/: HierarchyPanel.h
Editor/Source/ImGui/InspectorPanel/Private/: InspectorPanel.cpp  ModelInspector.cpp  PropertyDrawer.cpp  ShaderInspector.cpp  TextureInspector.cpp
Editor/Source/ImGui/InspectorPanel/Public/: InspectorHelper.h  InspectorInterface.h  InspectorPanel.h  Inspectors.h  ModelInspector.h  PropertyDrawer.h  ShaderInspector.h  (+2 more)
Editor/Source/ImGui/Private/: ImGuiManager.cpp
Editor/Source/ImGui/Public/: ImGuiInterface.h  ImGuiManager.h
Editor/Source/Importer/Private/: ModelImporter.cpp
Editor/Source/Importer/Public/: Importer.h  ModelImporter.h
Editor/Source/Qt/Private/: QtManager.cpp
Editor/Source/Qt/Public/: QtManager.h
Editor/Source/Selection/Private/: SelectionManger.cpp
Editor/Source/Selection/Public/: SelectionManager.h
Engine/: CMakeLists.txt
Engine/Source/Components/Private/: Component.cpp
Engine/Source/Components/Public/: Component.h  Components.h
Engine/Source/Core/Private/: AssetRef.cpp  Component.cpp  ComponentRegistry.cpp  RectTransform.cpp  Structs.cpp  Transform.cpp  Vertex.cpp
Engine/Source/Core/Public/: Base.h  Command.h  Component.h  ComponentRegistry.h  Components.h  Delegate.h  Engine_API.h  Engine_Includes.h  EnumBit.h  Functions.h  Handle.h  Macro.h  Object.h  RHI.h  Rect.h  RectTransform.h  ReflectionMacro.h  ReflectionMetadataKeys.h  ReflectionTypes.h  Result.h  Structs.h  Transform.h  Types.h  Vertex.h
Engine/Source/Physics/Private/: CollisionManager.cpp  Collsion.cpp
Engine/Source/Physics/Public/: Collision.h  CollisionManager.h  PhysicsManager.h
Engine/Source/Render/Private/: Renderer.cpp
Engine/Source/Render/Public/: FrustumCuller.h  RenderTypes.h  Renderer.h
Engine/Source/Renderer/: Renderer.h
Engine/Source/Renderer/Private/: PipelineManager.cpp  Renderer.cpp  SamplerManager.cpp
Engine/Source/Renderer/Public/: PipelineManager.h  RHI.h  RHIBuffer.h  RHIPipeline.h  RHIResource.h  RHIShader.h  RHITexture.h  Renderer.h
Engine/Source/Resource/Private/: Resource.cpp  ResourceManager.cpp  ResourceSerializationCallbacks.cpp
Engine/Source/Resource/Public/: Resource.h  ResourceHandle.h  ResourceHandle.inl  ResourceManager.h  ResourceManager.inl  Resources.h
Engine/Source/Runtime/Private/: Runtime.cpp
Engine/Source/Runtime/Public/: Runtime.h
Engine/Source/Scene/Private/: GameObject.cpp  Layer.cpp  Scene.cpp
Engine/Source/Scene/Public/: Entity.h  GameObject.h  Layer.h  Scene.h
Engine/Source/UI/Private/: UIComponent.cpp  UIImage.cpp  UIRenderComponent.cpp  UIRenderer.cpp
Engine/Source/UI/Public/: UIComponent.h  UIImage.h  UIRenderComponent.h  UIRenderer.h
Engine/Source/World/Private/: GameObject.cpp
Engine/Source/World/Public/: GameObject.h
Engine/src/: Core.cpp  Core.h  EngineAPI.h
Projects/ReflectionBamAdapter/: CMakeLists.txt
Projects/ReflectionBamAdapter/include/: BamReflectionMetadata.h  BamReflectionResourceSupport.h  BamReflectionSerialization.h  BamReflectionTypes.h  PropertyAttributes.h  PropertyMetadata.h  ReflectionHelper.h
Projects/ReflectionBamAdapter/src/: BamReflectionSerialization.cpp
Projects/ReflectionCodegen/: CMakeLists.txt  main.py
Projects/ReflectionCodegen/config/: job_schema.py
Projects/ReflectionCodegen/emitter/: __init__.py  common.py  file_emitter.py  function_emitter.py  property_emitter.py
Projects/ReflectionCodegen/model/: __init__.py  reflected_property.py  reflected_type.py
Projects/ReflectionCodegen/parser/: namespace_tracker.py  property_parser.py  type_parser.py
Projects/ReflectionCodegen/utils/: __init__.py  file_utils.py  scan_utils.py  text_utils.py
Projects/ReflectionCodegen/validation/: __init__.py
Projects/ReflectionCore/: CMakeLists.txt
Projects/ReflectionCore/include/macros/: ReflectionFunctionMacros.h  ReflectionPropertyMacros.h
Projects/ReflectionCore/include/reflection/: ReflectionCore_API.h
Projects/ReflectionCore/src/: Registry.cpp
Tools/TextureConverter/: CMakeLists.txt
Tools/TextureConverter/Private/: DirectXTexCompressor.cpp  TextureCompressorInterface.cpp  TextureConverter.cpp
Tools/TextureConverter/Public/: DirectXTexCompressor.h  TextureCompressorInterface.h  TextureConverter.h
(+435 files in other folders)
